--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,10 +9,12 @@ $primary-color: #7854F7;
 $secondary-color: #272D4E;
 $gray-color: #94A2B3;
 $radioactive-color: #299EF3;
+$bg-primary-color: #70C217;
 $transparent-color: #00000033;
 
 :root {
   --sm-size: 18px;
+  --sm-md-size: 36px;
   --md-size: 55px;
   --lg-size: 85px;
 }
