--- a/styles/media-queries.scss
+++ b/styles/media-queries.scss
@@ -1,23 +1,23 @@
-@media screen and (max-width: '1840px') {
-  :root {
-    --sm-size: 15px;
-    // --md-size: 55px;
-    --lg-size: 50px;
-  }
+// @media screen and (max-width: '1840px') {
+//   :root {
+//     --sm-size: 15px;
+//     --md-size: 35px;
+//     --lg-size: 50px;
+//   }
 
-  .hero-message {
-    padding-left: 5vw;
-  }
+//   .hero-message {
+//     padding-left: 5vw;
+//   }
 
-  .hero-message .title {
-    max-width: 40vw;
-  }
+//   .hero-message .title {
+//     max-width: 40vw;
+//   }
 
-  .button.primary.lg {
-    padding: 15px 30px;
-  }
+//   .button.primary.lg {
+//     padding: 15px 30px;
+//   }
 
-  .link.primary {
-    font-size: 17px;
-  }
-}
+//   .link.primary {
+//     font-size: 17px;
+//   }
+// }
