--- a/styles/organism/aboutus.module.scss
+++ b/styles/organism/aboutus.module.scss
@@ -2,7 +2,7 @@
   width: 100%;
   position: relative;
   // overflow: hidden;
-  max-width: 1920px;
+  // max-width: 1920px;
   margin: auto;
   margin-top: 165px;
   min-height: 1110px;
