end of layout design for PC 👌

--- a/styles/atoms/subtitle.module.scss
+++ b/styles/atoms/subtitle.module.scss
@@ -23,6 +23,10 @@
     position: relative;
   }
 
+  &.supported {
+    max-width: 668px;
+  }
+
   &.trusted {
     margin-top: 237px;
     max-width: 546px;
