--- a/styles/index.scss
+++ b/styles/index.scss
@@ -14,6 +14,8 @@
 @import './organism/aboutus.module.scss';
 @import './organism/slider.module.scss';
 @import './organism/carrousel.module.scss';
+@import './organism/support.module.scss';
+@import './organism/footer.module.scss';
 
 // media-queries
 @import './media-queries.scss';
