--- a/styles/organism/aboutus.module.scss
+++ b/styles/organism/aboutus.module.scss
@@ -51,6 +51,7 @@
   align-items: center;
   position: relative;
   margin-left: 257px;
+  padding: 0 10px;
 
   .image-container {
     margin-top: -60px;
