--- a/styles/organism/carrousel.module.scss
+++ b/styles/organism/carrousel.module.scss
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 18px 52.8537px rgba(215, 228, 249, 0.5);
+    // box-shadow: 0px 18px 52.8537px rgba(215, 228, 249, 0.5);
   }
 
   .semicolons {
