--- a/styles/organism/footer.module.scss
+++ b/styles/organism/footer.module.scss
@@ -7,6 +7,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    padding: 0 10px;
     padding-top: 45px;
     padding-bottom: 141.51px;
 
