--- a/styles/organism/support.module.scss
+++ b/styles/organism/support.module.scss
@@ -23,6 +23,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
     .message {
       max-width: 855px;
