--- a/styles/medias/aboutus.module.scss
+++ b/styles/medias/aboutus.module.scss
@@ -165,5 +165,13 @@
     margin-top: -80px;
     position: relative;
   }
+
+  .carrousel_container {
+    width: 142%;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
 }
 
