--- a/styles/medias/aboutus.module.scss
+++ b/styles/medias/aboutus.module.scss
@@ -167,11 +167,11 @@
   }
 
   .carrousel_container {
-    width: 142%;
+    width: 100%;
   }
 
-  body {
-    overflow-x: hidden;
+  .controler {
+    right: 20px;
   }
 }
 
