seed has been executed ©️

--- a/styles/organism/admin.module.scss
+++ b/styles/organism/admin.module.scss
@@ -39,5 +39,6 @@
   border: 2px solid;
   border-radius: 5px;
   overflow-x: auto;
+  margin-bottom: 40px;
   // background-color: $secondary-color;
 }
