login bg did build 👷‍♀️

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,6 +20,7 @@
 @import './organism/admin.module.scss';
 @import './organism/carrouselData.module.scss';
 @import './organism/modal.module.scss';
+@import './organism/login.module.scss';
 
 // media-queries
 @import './media-queries.scss';
