--- a/styles/organism/admin.module.scss
+++ b/styles/organism/admin.module.scss
@@ -9,7 +9,17 @@
 
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 18px;
+
+    .text_container {
+      display: flex;
+      align-items: center;
+
+      .text:first-child {
+        margin-right: 20px;
+      }
+    }
 
     .subtitle {
       margin: 0;
